data/all_generated_tests/raw_wast_tests/call_TypeMismatchinControlFlowInstructions_3684.wast
;; 3. **Test Description**: Perform a function call where the function signature specifies one set of return types, but the surrounding block expects different types.    - **Constraint**: This test examines if the implementation properly verifies the return types against the enclosing block's expected types.    - **Type Mismatch in Control Flow**: A mismatch leads to a type error when the block expects and tries to utilize the incorrect return types.

(assert_invalid
  (module
    (func $return-type-mismatch (result i32)
      (call 1)
    )
    (func (result f64))
  )
  "type mismatch"
)